--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@prisma/client": "^5.16.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
@@ -23,14 +24,15 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.11",
+    "@types/passport-jwt": "^4.0.1",
     "@types/validator": "^13.12.2",
     "concurrently": "^9.1.2",
     "nodemon": "^3.1.9",
+    "prisma": "^5.16.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   },
   "dependencies": {
-    "@prisma/client": "^6.5.0",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "connect-redis": "^8.0.2",
@@ -42,7 +44,6 @@
     "http-proxy-middleware": "^3.0.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "prisma": "^6.5.0",
     "qrcode": "^1.5.4",
     "redis": "^4.7.0",
     "resend": "^4.1.2",
